--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -3,7 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./style.css">
         <title>Todo List</title>
     </head>
     <body>
@@ -14,7 +13,7 @@
         <nav class="sidebar">
             <div>
                 <div class="sidebar-list">
-                    <button class="sidebar-item active" id="inbox">
+                    <button class="sidebar-item" id="inbox">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>inbox</title><path d="M19,15H15A3,3 0 0,1 12,18A3,3 0 0,1 9,15H5V5H19M19,3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg>
                         Inbox
                     </button>
@@ -22,7 +21,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-today</title><path d="M7,10H12V15H7M19,19H5V8H19M19,3H18V1H16V3H8V1H6V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg>
                         Today
                     </button>
-                    <button class="sidebar-item" id="this-week">
+                    <button class="sidebar-item" id="week">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>calendar-week</title><path d="M6 1H8V3H16V1H18V3H19C20.11 3 21 3.9 21 5V19C21 20.11 20.11 21 19 21H5C3.89 21 3 20.1 3 19V5C3 3.89 3.89 3 5 3H6V1M5 8V19H19V8H5M7 10H17V12H7V10Z" /></svg>
                         This Week
                     </button>
@@ -51,7 +50,6 @@
             </div>
         </nav>
         <main>
-
         </main>
     </body>
 </html>
