--- a/src/assets/index2.html
+++ b/src/assets/index2.html
@@ -14,7 +14,7 @@
         <nav class="sidebar">
             <div>
                 <div class="sidebar-list">
-                    <button class="sidebar-item active" id="inbox">
+                    <button class="sidebar-item" id="inbox">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>inbox</title><path d="M19,15H15A3,3 0 0,1 12,18A3,3 0 0,1 9,15H5V5H19M19,3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5A2,2 0 0,0 19,3Z" /></svg>
                         Inbox
                     </button>
@@ -35,7 +35,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>format-list-checks</title><path d="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z" /></svg>
                         Home
                     </button>
-                    <button class="sidebar-item project" id="project-study" data-attribute="study">
+                    <button class="sidebar-item project active" id="project-study" data-attribute="study">
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>format-list-checks</title><path d="M3,5H9V11H3V5M5,7V9H7V7H5M11,7H21V9H11V7M11,15H21V17H11V15M5,20L1.5,16.5L2.91,15.09L5,17.17L9.59,12.59L11,14L5,20Z" /></svg>
                         Study
                     </button>
@@ -53,8 +53,25 @@
         <main>
             <div class="page">
                 <div class="pg-top-section">
-                    <h1>Inbox</h1>
+                    <h1 class="project-name">Study</h1>
+                    <p class="project-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum at consequuntur ipsam deserunt velit placeat, autem debitis accusantium libero beatae, ipsa obcaecati sapiente maxime, rem porro molestias reprehenderit tenetur architecto.</p>
+                    <div class="project-buttons">
+                        <button class="project-edit">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>pencil-outline</title><path d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z" /></svg>
+                            Edit Project
+                        </button>
+                        <button class="project-add-section">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
+                            Add Section
+                        </button>
+                        <button class="project-delete">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>pencil-outline</title><path d="M14.06,9L15,9.94L5.92,19H5V18.08L14.06,9M17.66,3C17.41,3 17.15,3.1 16.96,3.29L15.13,5.12L18.88,8.87L20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18.17,3.09 17.92,3 17.66,3M14.06,6.19L3,17.25V21H6.75L17.81,9.94L14.06,6.19Z" /></svg>
+                            Delete Project
+                        </button>
+                    </div>
                 </div>
+
+
                 <div class="section" id="unlisted">
                     <div class="todo-items">
                         <!-- store a dataset.index with associator -->
@@ -120,28 +137,6 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="add-todo-button">
-                            <button class="add-todo">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
-                                Add Task
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="section" id="homework">
-                    <div class="section-header">
-                        <button class="collapse-section">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>chevron-down</title><path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" /></svg>
-                        </button>
-                        <span class="section-name">
-                            homework
-                        </span>
-                        <button class="delete-section">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>delete-outline</title><path d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z" /></svg>
-                        </button>
-                    </div>
-                    <div class="todo-items">
-                        <!-- store a dataset.index with associator -->
                         <div class="todo-item" data-attribute="1">
                             <div class="checkbox-container">
                                 <input type="checkbox" class="todo-checkbox">
@@ -204,28 +199,6 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="add-todo-button">
-                            <button class="add-todo">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>plus</title><path d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z" /></svg>
-                                Add Task
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <div class="section" id="homework">
-                    <div class="section-header">
-                        <button class="collapse-section">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>chevron-down</title><path d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z" /></svg>
-                        </button>
-                        <span class="section-name">
-                            homework
-                        </span>
-                        <button class="delete-section">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>delete-outline</title><path d="M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19M8,9H16V19H8V9M15.5,4L14.5,3H9.5L8.5,4H5V6H19V4H15.5Z" /></svg>
-                        </button>
-                    </div>
-                    <div class="todo-items">
-                        <!-- store a dataset.index with associator -->
                         <div class="todo-item" data-attribute="1">
                             <div class="checkbox-container">
                                 <input type="checkbox" class="todo-checkbox">
